🎆 FIXED: Navbar layer overlapped on the entire page

--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,7 @@ li {
     position: fixed;
     z-index: 100;
     width: 100%;
+    height: 0;
   }
   .landing-page nav .hamburger-btn {
     display: flex;
